# redactor

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  mutants.toml
.cargo/: config.toml
.github/workflows/: coverage.yml  mutation-testing.yml  rust.yml
src/: error.rs  lib.rs  main.rs
src/domain/: account.rs  call_details.rs  mod.rs  phone.rs
src/redaction/: mod.rs  secure.rs  strategy.rs
tests/: README.md  cli_comprehensive_test.rs  cli_integration_test.rs  cli_unit_tests.rs  coverage_gaps_test.rs  domain_utilities_test.rs  error_tests.rs  generate_pdfs.rs  generate_type3_pdfs.py  integration_test.rs  property_based_tests.rs  redaction_edge_cases_test.rs  regex_patterns_test.rs  secure_redaction_edge_cases_test.rs
tests/common/: assertions.rs  fixtures.rs  mod.rs  pdf_helpers.rs
tests/unit/: domain_tests.rs  mod.rs  pattern_tests.rs
