[package]
name = "redactor"
version = "0.2.1"
edition = "2021"
rust-version = "1.70"
description = "Secure PDF redaction library with Type3 font support using MuPDF"
authors = ["redactor contributors"]
license = "MIT"
repository = "https://github.com/yourusername/redactor"
homepage = "https://github.com/yourusername/redactor"
documentation = "https://docs.rs/redactor"
readme = "README.md"
keywords = ["pdf", "redaction", "security", "privacy", "mupdf"]
categories = ["command-line-utilities", "text-processing"]
exclude = [
    "target/*",
    "tests/*.pdf",
    ".DS_Store",
]

[[bin]]
name = "redactor"
path = "src/main.rs"

[lib]
name = "redactor"
path = "src/lib.rs"

[dependencies]
lopdf = "0.32"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
regex = "1.10"
printpdf = "0.7"
pdf-extract = "0.7"
mupdf = "0.5"
mupdf-sys = "0.5"
once_cell = "1.19"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
